--- a/index.html
+++ b/index.html
@@ -97,13 +97,16 @@
         var target;
         var yourScore = 0;
         var numberOptions = [];
-        var imageOptions = ["assets/images/blue.jpg", "assets/images/pink.jpg", "assets/images/white.jpg",
-            "assets/images/yellow.png"
+        // var imageOptions = ["assets/images/blue.jpg", "assets/images/pink.jpg", "assets/images/white.jpg",
+        //     "assets/images/yellow.png"
+            var imageOptions = ["assets/images/gem11.jpeg", "assets/images/gem22.jpeg", "assets/images/gem33.jpeg",
+            "assets/images/gem4.jpeg"
         ];
 
 
         for (var i = 0; i <= 3; i++) {
             var randomNum = Math.floor(Math.random() * 12 + 1);
+            console.log(randomNum);
             numberOptions.push(randomNum);
         }
 
@@ -136,6 +139,7 @@
             yourScore = 0;
             $("#yourScore").text(yourScore);
             target = Math.floor(Math.random() * 101 + 19)
+            console.log(target);
             $("#target").text(target);
         }
 
